--- a/framework_calibrating_ecosystem_models.tex
+++ b/framework_calibrating_ecosystem_models.tex
@@ -246,6 +246,20 @@ We note that in practice the proposal covariance $\CovProp$ is typically adaptiv
 
 % Basis functions
 \subsection{Basis Functions}
+A well-established method to deal with high-dimensional outputs, proposed in Higdon et al, is to emulate the coefficients scaling basis vectors in a basis 
+representation of the computer model output. For ease of notation, we introduce the method in the case $P = 1$; the multi-objective case will simply follow 
+as $P$ independent applications of the method described here. We thus consider representing the computer model $\fwd: \parspace \to \R^{\Ntime}$ as a linear 
+combination of basis vectors $\basisOutputVec_1, \dots, \basisOutputVec_{\NbasisVec}$,
+\begin{align}
+\fwd(\bpar) &= \sum_{\basisVecIdx = 1}^{\NbasisVec} \basisVecWeight_{\basisVecIdx}(\bpar) \basisOutputVec _{\basisVecIdx} + \epsilon_{\fwd}
+\end{align}
+If the above basis representation is accurate (i.e., error $\epsilon_{\fwd}$ is small) then the problem has been reduced from fitting a multi-output emulator for
+$\fwd: \parspace \to \R^{\Ntime}$ to fitting $\NbasisVec$ independent univariate emulators for the weights $\basisVecWeight_{\basisVecIdx}: \bpar \to \R$. 
+
+While the basis vectors $\basisOutputVec_1, \dots, \basisOutputVec_{\NbasisVec}$ can be constructed via many different methods, we follow Higton et al and 
+consider the specific case where principal components analysis (PCA) is applied. Assuming the forward model has been run at design inputs $\bpar_1, \dots, \bpar_N$, we 
+stack the corresponding outputs $\fwd(\bpar_1), \dots, \fwd(\bpar_N)$ as the columns of an $\Ntime \times \Ndesign$
+matrix $\fwdOutputMat$.
 
 % Likelihood and loss emulation
 \subsection{Likelihood and Loss Emulation}
